--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <img src="https://c.tenor.com/Z8ezUHZzcLoAAAAC/love.gif" height="100" />
     </br>
     </br>
-    <font size="5" face="Poppins medium">Wes moco suratku Nir? Mungkin kui perasaan sing isoh tak utarano nang koe, aku gak sempurna Nir, akeh kurange tapi aku bakal dadi sing terbaik dinggo awakmu. 
-      Kiro kiro isoh gak Nir yen aku luwih cedak ro koe? (reti dewe aku wonge sederhana, tapi cintaku padamu tiada tara :) )</font>
+    <font size="5" face="Poppins medium">Wes moco suratku Nir? Mungkin kui perasaan sing isoh tak utarano nang koe, aku gak sempurna Nir, reti dewe aku wonge sederhana, tapi cintaku padamu tiada tara :)
+      Kiro kiro isoh gak Nir yen aku luwih cedak ro koe?</font>
     </br>
     </br>
 
