--- a/index.html
+++ b/index.html
@@ -3,12 +3,7 @@
 
 <head>
   <title>HAI MANIEZ KU</title>
-  <link rel="stylesheet" href="style.css" <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  
 
 
 
@@ -31,7 +26,7 @@
     </br>
     </br>
     <font size="5" face="Poppins medium">Wes moco suratku Nir? Mungkin kui perasaan sing isoh tak utarano nang koe, aku gak sempurna Nir, reti dewe aku wonge sederhana, tapi cintaku padamu tiada tara :)
-      Kiro kiro isoh gak Nir yen aku luwih cedak ro koe?</font>
+      Kiro kiro isoh gak Nir yen aku luwih cedak ro koe?  )</font>
     </br>
     </br>
 
@@ -43,11 +38,15 @@
       target="_blank">
       <img src="patah.png" alt="" height="60">
     </a>
-  </center>
-
-  <audio controls autoplay hidden> 
+  </br>
+  <br>
+    <font size="4" face="Poppins medium">Nyetel lagu sek yekan </font><br>
+    <audio controls autoplay> 
    <source src="The Vamps.mp3">
   </audio>
+  </center>
+
+  
 
 </body>
 
