--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <center>
     <audio src="" hidden autoplay loop></audio>
     <font size="6" face="Poppins medium">HAI NIRA SUPRA :) </font><br>
-    <img src="https://c.tenor.com/Z8ezUHZzcLoAAAAC/love.gif" height="100" />
+    <img src="NT.jpg" height="150" />
     </br>
     </br>
     <font size="5" face="Poppins medium">Wes moco suratku Nir? Mungkin kui perasaan sing isoh tak utarano nang koe, aku gak sempurna Nir, reti dewe aku wonge sederhana, tapi cintaku padamu tiada tara :) Kiro kiro isoh gak Nir yen aku luwih cedak ro koe?</font>
