--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>HAI MANIEZ KU</title>
+  <title>DESEMBERSAMAMU</title>
   <link rel="stylesheet" href="style.css" <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
